--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="sidebar">
+        <div class="song__cards">
+            <img src="" alt="" class="song__img">
+            <h3 class="card__img"></h3>
+        </div>
+        <div class="song__cards">
+            <img src="" alt="" class="song__img">
+            <h3 class="card__img"></h3>
+        </div>
+        <div class="song__cards">
+            <img src="" alt="" class="song__img">
+            <h3 class="card__img"></h3>
+        </div>
+    </nav>
     <div class="card">
         <div class="card__img">
-            <img src="" alt="image" id="card__img">
+            <img src="" alt="image" id="card__img"  width="100%">
         </div>
         <div class="song__details">
             <h2 class="song__name">
